--- a/weather.css
+++ b/weather.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url('images/sunny.jpg');
+    background-image: url('sunny.jpg');
     height: 100vh;
     overflow: hidden;
     background-repeat: no-repeat;
